--- a/classes/AccountOperationsTest.cls
+++ b/classes/AccountOperationsTest.cls
@@ -11,5 +11,5 @@ public class AccountOperationsTest {
         // Verify
         Account savedAcc = [SELECT Description FROM Account WHERE Id = :result.getId()];
         System.assertEquals('Default Description', savedAcc.Description);
-    }
+    }//Test
 }
