--- a/classes/AccountOperations.cls
+++ b/classes/AccountOperations.cls
@@ -1,6 +1,16 @@
 public class AccountOperations {
     public static Account setDefaultDescription(Account a) {
-        a.Description = 'Default Description';
+        a.Description = 'Default Descriptions';
         return a;
+    }//Conflict2
+    
+    public static void s_method(){
+     //Part of 2nd US
     }
+
+    public static void b_method(){
+     //Part of 2nd US
+     //AS
+    }
+    
 }
