--- a/classes/AccountOperations.cls
+++ b/classes/AccountOperations.cls
@@ -2,5 +2,7 @@ public class AccountOperations {
     public static Account setDefaultDescription(Account a) {
         a.Description = 'Default Description';
         return a;
+        if(true)
+            system.debug('asd');
     }
 }
