--- a/classes/BackpromoteTest.cls
+++ b/classes/BackpromoteTest.cls
@@ -10,4 +10,16 @@ Public class BackpromoteTest{
           system.debug('123');
         }
     
+    public class Foo {
+        public static final Integer MY_NUM = 0;
+        public String myTest = '';
+        DataModule dmTest = new DataModule();
+    }
+    
+    public Foo() {
+        Integer localVariable; // This is in camel case, so it's ok
+
+        Integer LOCAL_VARIABLE; // This will be reported unless you change the regex
+    }    
+    
 }
